--- a/.xsessionrc
+++ b/.xsessionrc
@@ -9,7 +9,7 @@ xrdb -merge .Xresources
 
 # Fire up apps
 
-xscreensaver -no-splash &
+#xscreensaver -no-splash &
 
 # Set background image with feh
 feh --bg-scale /usr/share/backgrounds/warty-final-ubuntu.png &
