--- a/.xsessionrc
+++ b/.xsessionrc
@@ -8,7 +8,7 @@ xrdb -merge .Xresources
 xscreensaver -no-splash &
 
 # Set background image with feh
-feh --bg-scale /usr/share/backgrounds/warty-final-ubuntu.png &
+feh --bg-scale /home/pjpavan/Pictures/csgo.jpg &
 
 if [ -x /usr/bin/nm-applet ] ; then
    nm-applet --sm-disable &
